--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Curcolus</title>
 </head>
 <body>
-    <img src="979UNDIRA.png" width="50%" height="30%">
+    <img src="https://web.undira.ac.id/dokumen/559LOGO-UNDIRA-HD-01.jpg" width="50%" height="30%">
     <br>
     <h2> BIODATA DIRI </h2>
         <h3> Nama    : Sonia <br />
