--- a/index.html
+++ b/index.html
@@ -4,19 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curcolus</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <img src="https://web.undira.ac.id/dokumen/559LOGO-UNDIRA-HD-01.jpg" width="50%" height="30%">
-    <br>
-    <h2> BIODATA DIRI </h2>
+</br>
+</br>
+    <fieldset>
         <h3> Nama    : Sonia <br />
             Prodi    : Teknik Informatika <br />
             NIM      : 411231086  <br />
             Matkul   : Kalkulus </h3> 
+     </fieldset>
 </br>
-    <h1> PERSAMAAN</h1>
-    <p> ◉ Persamaan adalah kalimat terbuka yang menggunakan relasi “=”. <br/>
-        ◉ Persamaan linier adalah persamaan yang variabelnya berderajad satu. <br/> </p>
+</br>
+</br>
+    <h1 align="center"> <b>PERSAMAAN</b></h1>
+    <p>Persamaan adalah suatu pernyataan matematika dalam bentuk simbol yang menyatakan bahwa dua hal adalah persis sama. Persamaan ditulis dengan tanda sama dengan (=), seperti berikut:</br>
+        x + 3 = 5, yang menyatakan bahwa nilai x = 2. </br>
+        2x + 3 = 5, yang menyatakan bahwa nilai x = 1. </br>
+        </br>
+        Pernyataan di atas adalah suatu kesamaan. Persamaan dapat digunakan untuk menyatakan kesamaan dua ekspresi yang terdiri dari satu atau lebih variabel. Sebagai contoh, untuk x anggota bilangan nyata, persamaan berikut selalu benar: </br>
+        x(x - 1) = x2 - x </br>
+    </br>
+        Persamaan di atas adalah contoh dari identitas: persamaan yang selalu benar, tak peduli berapa pun nilai variabel yang ada di dalamnya. Persamaan berikut bukanlah suatu identitas: </br>
+        x2 - x = 0 </br>
+</br>
+        Persamaan di atas adalah salah untuk sejumlah tak hingga x, dan hanya benar untuk satu nilai; nilai akar unik dari persamaan, x=1. Karenanya, jika suatu persamaan diketahui bernilai benar, persamaan tersebut membawa informasi mengenai nilai x. Secara umum, nilai variabel di mana suatu persamaan menjadi benar disebut dengan solusi atau penyelesaian. Menyelesaikan suatu persamaan berarti menemukan solusinya. </br>
+</br>
+        Banyak pengarang yang menggunakan istilah persamaan untuk kesamaan yang bukan identitas. Perbedaan antara kedua konsep tersebut kadang sulit dibedakan; sebagai contoh, </br>
+</br>
+        (x + 1)2 = x2 + 2x + 1 </br>
+</br>
+        adalah identitas, sedangkan </br>
+</br>
+
+        (x + 1)2 = 2x2 + x + 1 </br>
+</br>
+        adalah persamaan yang memiliki akar x=0 dan x=1 </br>
+         Apakah suatu pernyataan dimaksudkan sebagai suatu identitas atau suatu persamaan, menentukan informasi mengenai variabelnya sering dapat ditentukan berdasarkan konteksnya. </br>
+        Huruf-huruf awal alfabet seperti a, b, c, ... sering kali digunakan sebagai konstanta, dan huruf-huruf di akhir alfabet, seperti x, y, z, umumnya digunakan sebagai lambang variabel. </br>
+    </p>
     <h3>Tiga hal berikut dapat kita lakukan dalam menentukan penyelesaian dari
         persamaan:</h3>
     <p> a. Menambah kedua ruas dengan bilangan yang sama <br/>
@@ -24,7 +52,12 @@
         c. Membagi atau mengalikan kedua ruas dengan bilangan yang sama dan<br?>
         bukan nol.
     </p>
-        <h2>A. Persamaan Linear</h2>
+</br>
+    <h2> JENIS-JENIS PERSAMAAN</h2>
+    <p>Persamaan bisa dikelompokkan berdasarkan jenis operasi dan kuantitas yang dilibatkan. Jenis-jenisnya di antaranya adalah:</p>
+      <h3>1. Persamaan Polinomial</h3>
+      <p> Persaman polinomial, yaitu persamaan yang kedua sisinya berisi polinomial. Persamaan jenis ini bisa dikelompokklan lagi berdasarkan derajatnya:</p>
+    <h3>a. Persamaan Linear</h3>
         <p> Persamaan linear adalah sebuah persamaan aljabar, yang tiap sukunya mengandung konstanta, atau perkalian konstanta dengan variabel tunggal. Persamaan ini dikatakan linear sebab hubungan matematis ini dapat digambarkan sebagai garis lurus dalam Sistem koordinat Kartesius.<br/>
             Bentuk umum untuk persamaan linear adalah y = mx + b <br/>
             <p> </p>
@@ -39,7 +72,7 @@
                 Jadi, nilai x pada persamaan tersebut adalah 0,5
             </p>
 
-        <h3> Berikut kalkulator untuk Menghitung Persamaan Linear</h3>
+        <h4> Berikut kalkulator untuk Menghitung Persamaan Linear</h4>
         <center>
             <fieldset>
                 <table>
@@ -90,7 +123,7 @@
         <br />
         <br />
         <br>
-        <h2> B. Persamaan Kuadrat </h2>
+        <h3> b. Persamaan Kuadrat </h3>
         <p>Persamaan kuadrat adalah persamaan polinomial (suku banyak) variabel 1 yang memiliki pangkat tertinggi dua. Bentuk umum persamaan kuadrat dalam variabel 𝑥 adalah 𝑎𝑥² + 𝑏𝑥 + 𝑐 = 0; 𝑎, 𝑏, 𝑐 ∈
         𝑅, 𝑎 ≠ 0. <br/>
         <p></p>
@@ -99,7 +132,7 @@
         (𝑥 + 5)(𝑥 − 3) = 0 <br/>
         𝑥 = −5 atau 𝑥 = 3
        </p>
-       <h3> Berikut kalkulator untuk menghitung Persamaan Kuadrat</h3>
+       <h4> Berikut kalkulator untuk menghitung Persamaan Kuadrat</h4>
 
             <center>
             <fieldset>
@@ -158,7 +191,72 @@
         <br />
         <br />
         <br />
+<h3>c. Persamaan Kubik</h3>
+<p> Dalam aljabar, persamaan kubik dalam satu variabel adalah persamaan yang berbentuk</br>
+    ax³ + bx² + cx + d = 0 </br>
+    di mana {\displaystyle a} adalah tak nol. </br>
+    Solusi dari persamaan ini disebut akar fungsi dari fungsi kubik yang didefinisikan oleh sisi kiri persamaan. Jika semua koefisien {\displaystyle a}, {\displaystyle b}, {\displaystyle c}, dan {\displaystyle d} dari persamaan kubik adalah bilangan riil, maka ia memiliki setidaknya satu akar nyata (ini berlaku untuk semua fungsi polinomial derajat ganjil). Semua akar persamaan kubik dapat ditemukan dengan cara berikut: </br>
+    - secara aljabar, yaitu, mereka dapat diekspresikan oleh rumus kubik yang melibatkan empat koefisien, empat operasi aritmetika dasar dan akar ke-n (radikal). (Ini juga berlaku untuk persamaan kuadrat (derajat dua) dan kuartik (derajat empat), tetapi bukan persamaan derajat lebih tinggi, oleh teorema Abel-Ruffini.) </br>
+    - trigonometri </br>
+    - analisis numerik dari akar dapat ditemukan menggunakan algoritma pencarian akar seperti metode Newton.</br>
+    Koefisien tidak perlu bilangan riil. Banyak dari apa yang dibahas di bawah ini berlaku untuk koefisien dalam medan apa pun dengan karakteristik selain 2 dan 3. Solusi dari persamaan kubik tidak harus milik bidang yang sama dengan koefisien. Sebagai contoh, beberapa persamaan kubik dengan koefisien rasional memiliki akar yang bilangan kompleks irasional (dan bahkan tidak nyata). </br>
 
+</p>
+<h3>2. Persamaan Rasional</h3>
+<p> Persamaan rasional adalah pecahan dengan satu atau lebih variabel pada bagian pembilang atau penyebut. Persamaan rasional adalah pecahan apapun yang melibatkan setidaknya satu persamaan rasional. Seperti persamaan aljabar biasa, persamaan rasional diselesaikan dengan melakukan operasi yang sama terhadap dua sisi persamaan hingga variabelnya dapat dipindahkan ke salah satu sisi persamaan. Dua teknik khusus, perkalian silang dan mencari penyebut terkecil yang sama, adalah cara yang sangat berguna untuk memindahkan variabel dan menyelesaikan persamaan rasional. </br>
+
+</p>
+<h3> 3. Persamaan Irasional</h3>
+<p>Persamaan irasional adalah persamaan yang variabelnya berada di bawah tanda akar dan tidak dapat ditarik keluar tanda akar. Untuk semesta bilangan real, persamaan irasional terdefinisi jika komponen yang memuat variabel di bawah tanda akar bernilai lebih dari atau sama dengan nol. </br>
+    Langkah-langkah persamaan menyelesaikan irasional secara umum adalah sebagai berikut: </br>
+    1. Syarat terdefinisi yaitu di bawah tanda akar ≥ 0 </br>
+    2. Solusi (kuadratkan kedua ruas). </br>
+    3. Tuliskan kumpulan penyelesaian (HP). </br>
+
+</p>
+<h3>4. Persamaan Mutlak</h3>
+<p>
+    Persamaan nilai mutlak adalah persamaan yang memuat variabel x di dalam tanda mutlak.  Konsep dasar persamaan nilai mutlak ini hampir sama dengan nilai mutlak itu sendiri. Hanya saja, kamu harus mencari solusi x yang memenuhi untuk setiap persamaan. Nilai mutlak biasa dituliskan dalam kurung “| …|. Misalnya, |4|, |5|, dan seterusnya. Jika suatu bilangan berada di dalam tanda | ..|, sebenarnya nilai bilangan itu bisa positif dan bisa juga negatif. Namun, pemberian tanda mutlak menganggap bahwa nilainya selalu positif. Contoh |12| bisa bernilai -12 atau 12. Lalu, bagaimana dengan persamaan nilai mutlak? Pada persamaan nilai mutlak, tentu ada dua kemungkinan persamaan yang memenuhi, yaitu persamaan yang memuat tanda negatif maupun persamaan yang tidak memuat tanda negatif. </br>
+    Bentuk umum persamaan nilai mutlak adalah sebagai berikut. </br>
+    |ax + b| = c, dengan ax + b = c atau ax + b = -c </br>
+    Pada setiap persamaan nilai mutlak, biasanya kamu diminta untuk menentukan himpunan penyelesaian dari x atau nilai x yang memenuhi. Mengingat, persamaan di dalam tanda mutlak tersebut bisa berupa dua kemungkinan, yaitu ax + b = c atau ax + b = -c. Artinya, akan ada dua nilai x yang memenuhi. Untuk |x| = |a|, berlaku x = a atau x =-a. </br>
+</p>
+<h4> Contoh Persamaan Nilai Mutlak</h4>
+<p> |x + 2| = 6 </br>
+    Berapakah nilai x yang memenuhi? </br>
+    Pertama, kamu harus menjabarkan dua kemungkinan bentuk persamaan tersebut. </br>
+    Kemungkinan 1: </br>
+    x + 2 = 6 </br>
+    x = 4 </br>
+    Kemungkinan 2: </br>
+    -(x + 2) = 6 </br>
+    (x + 2) =- 6 </br>
+    x = -6 – 2 </br>
+    x = -8 </br>
+    Dari penjabaran di atas, ternyata ada dua solusi nilai x, kan? Yaitu 4 dan -8. </br>
+    Jadi, nilai x yang memenuhi adalah 4 atau –8. </br>
+    Untuk membuktikannya, coba substitusikan nilai 4 atau -8 pada persamaan nilai mutlaknya. </br>
+    Untuk x = 4 → |4 + 2| = 6 </br>
+    |6| = 6 (memenuhi) </br>
+    Untuk x = -8 → |-8 + 2| = 6,  </br>
+    |-6| =  6 (memenuhi), ingat -6 berada di dalam tanda mutlak, sehingga
+
+                                              dianggap positif. </br>
+
+</p>
+<h3>5. Persamaan Diferensial</h3>
+<p>Persamaan diferensial adalah persamaan matematika untuk fungsi satu variabel atau lebih, yang menghubungkan nilai fungsi itu sendiri dan turunannya dalam berbagai orde. Persamaan diferensial memegang peranan penting dalam rekayasa , fisika , ilmu ekonomi dan berbagai disiplin ilmu lainnya. </br>
+    Persamaan diferensial muncul dalam berbagai bidang sains dan teknologi , bilamana hubungan deterministik yang melibatkan besaran yang berubah secara kontinu (dimodelkan oleh fungsi matematika) dan laju perubahannya (dinyatakan sebagai turunan) diketahui atau dipostulatkan. Ini terlihat misalnya pada mekanika klasik , di mana gerakan sebuah benda diperiksa oleh posisi dan kecepatannya terhadap waktu. Hukum Newton memungkinkan kita mengetahui hubungan posisi, kecepatan , akselerasi dan berbagai gaya yang bertindak terhadap benda tersebut, dan menyatakannya sebagai persamaan diferensial posisi sebagai fungsi waktu. Dalam banyak kasus, persamaan diferensial ini dapat memecahkan secara eksplisit, dan menghasilkan hukum gerak.</br>
+</br>
+Contoh pemodelan masalah dunia nyata menggunakan persamaan diferensial adalah penentuan kecepatan bola yang jatuh bebas di udara, hanya dengan perhitungan gravitasi dan penahan udara. Percepatan bola tersebut ke arah tanah adalah percepatan karena gravitasi dikurangi dengan perlambatan karena pembekuan udara. Mencari kecepatan sebagai fungsi waktu mensyaratkan pemecahan sebuah persamaan diferensial. Contoh lain adalah untuk simulasi gerak dinamis atau simulasi dinamis . </br>
+</br>
+    Teori persamaan diferensial sudah cukup berkembang, dan metode yang digunakan bervariasi sesuai jenis persamaan yaitu: </br>
+    - Persamaan diferensial biasa (PDB) adalah persamaan diferensial di mana fungsi yang tidak diketahui ( variabel terikat ) adalah fungsi dari variabel bebas tunggal. Dalam bentuk paling sederhana fungsi yang tidak diketahui ini adalah fungsi riil atau fungsi kompleks , namun secara umum bisa juga berupa fungsi vektor maupun matriks. Lebih jauh lagi, persamaan diferensial biasa digolongkan berdasarkan orde tertinggi dari turunan terhadap variabel terikat yang muncul dalam persamaan tersebut. </br>
+    - Persamaan diferensial parsial (PDP) adalah persamaan diferensial di mana fungsi yang tidak diketahui adalah fungsi dari banyak variabel bebas, dan persamaan tersebut juga melibatkan turunan parsial . Orde persamaan didefinisikan seperti pada persamaan diferensial biasa, namun klasifikasi lebih jauh ke dalam persamaan eliptik, hiperbolik, dan parabolik, terutama untuk persamaan diferensial linear orde dua, sangatlah penting. Beberapa pesamaan diferensial parsial tidak dapat digolongkan dalam kategori-kategori tadi, dan disebut sebagai jenis campuran. </br>
+</br>
+Baik persamaan diferensial biasa maupun parsial dapat digolongkan menjadi linier atau nonlinier . Sebuah persamaan diferensial disebut linier apabila fungsi yang tidak diketahui dan turunannya muncul dalam pangkat satu (hasil kali tidak dapat dibolehkan). Bila tidak memenuhi syarat ini, persamaan tersebut adalah nonlinier .
+
+</p>
 
 </body>
 </html>
